--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ site.title }} - {{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
   
-    <!-indieweb stuff->
+    <!--indieweb stuff-->
     <meta http-equiv="content-type" content="text/html; charset=utf-8i">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
