--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -88,6 +88,10 @@ margin: 0 auto;
 
 /* Title  styling */
 h1 { font-family: 'ModernDos', sans-serif; color: black}
+h2 { font-family: 'ModernDos', sans-serif; color: black}
+h3 { font-family: 'ModernDos', sans-serif; color: black}
+h4 { font-family: 'ModernDos', sans-serif; color: black}
+
 
 body {background-color: black; color: black}
 
