--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
 
-    <link rel="icon" href="/assets/images/favicon.png"/>
+    <link rel="icon" href="/assets/images/favicon.ico"/>
   </head>
   <body>
 	  <div class="intro-header-outer">
@@ -23,7 +23,7 @@
 <div class="navbar">
 
 	  	  <ul>
-		  {% for item in site.data.navigation %}			  <div class="navbar-inner">
+		  {% for item in site.data.navigation %}			  <div class="navbar">
 		  <!-- <div class="navbar-content"> -->
 			<!--<div class="navbar-content">-->
 		  <li>
