--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h1>
+<h1>> {{ page.title }}</h1>
 <sub>
-<p>{{ page.date | date_to_string }}</p>
 <p>tags:
 {% for tag in page.tags %}
     #{{tag}}
 {% endfor %}</p>
 </sub>
+<sub>This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.</sub>
 <p>--------------------------------</p>
 {{ content }}
 
