--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">    
     <title>{{ site.title }} - {{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
-  
+	<!--inserting kramdown rouge syntax highlighter-->
+	<link rel="stylesheet" href="/assets/css/syntax.css" />
+
     <!--indieweb stuff-->
     <meta http-equiv="content-type" content="text/html; charset=utf-8i">
     <meta name="mobile-web-app-capable" content="yes" />
