support gumshoe gooper!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
 			<img src="/assets/images/antinft.gif">
 			<img src="/assets/images/poweredbyfedora.gif">
 			<img src="/assets/images/getquake.gif">
+			<a href="https://www.hypnospace.net/"><img src="/assets/images/gumshoebutton.gif"></a>
 		</div>
   </body>
 </html>
