--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,9 @@ layout: default
 <sub>
 <p>tags:
 {% for tag in page.tags %}
-    #{{tag}}
+<a class="post" href="/tag/{{tag}}">#{{tag}}</a>{% unless forloop.last %}, {% endunless %}
 {% endfor %}</p>
 </sub>
 <sub>This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.</sub>
 <p>--------------------------------</p>
 {{ content }}
-
-
