--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
   <head>
+	{% if site.tags != "" %}
+  		{% include collect_tags.html %}
+	{% endif %}
     <meta charset="utf-8">    
     <title>{{ site.title }} - {{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
