--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,10 @@ layout: default
 <link rel="stylesheet" href="/assets/css/syntax.css" />
 <h1>> {{ page.title }}</h1>
 <sub>
-<p>tags:
-{% for tag in page.tags %}
-<a class="post" href="/tag/{{tag}}">#{{tag}}</a>{% unless forloop.last %}, {% endunless %}
-{% endfor %}</p>
+    tags: {% for tag in page.tags %}
+    <a class="post" href="/tag/{{tag}}">#{{tag}}</a>{% unless forloop.last %}, {% endunless %}
+    {% endfor %}
+    <br>
+    This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.
 </sub>
-<sub>This page was last updated at {{ "now" | date: "%Y-%m-%d %H:%M" }}.</sub>
-<p>--------------------------------</p>
 {{ content }}
